--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ h1, h2, h3, h4, h5, h6, p, a, ul, ol, li
    padding: 0;
 }
 
-/* Reset buttons border. It's important for input and button tags. 
- * border-collapse should be separate for shadow in IE. 
+/* Reset buttons border. It's important for input and button tags.
+ * border-collapse should be separate for shadow in IE.
  */
 .button
 {
@@ -54,7 +54,7 @@ h1, h2, h3, h4, h5, h6, p, a, ul, ol, li
 .postheadericons,
 .postfootericons,
 .blockcontent,
-ul.vmenu a 
+ul.vmenu a
 {
    text-align: left;
 }
@@ -134,7 +134,7 @@ ul.vmenu a
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
 }
 
-.postcontent h1 a, .postcontent h1 a:link, .postcontent h1 a:hover, .postcontent h1 a:visited, .blockcontent h1 a, .blockcontent h1 a:link, .blockcontent h1 a:hover, .blockcontent h1 a:visited 
+.postcontent h1 a, .postcontent h1 a:link, .postcontent h1 a:hover, .postcontent h1 a:visited, .blockcontent h1 a, .blockcontent h1 a:link, .blockcontent h1 a:hover, .blockcontent h1 a:visited
 {
    font-size: 26px;
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
@@ -155,7 +155,7 @@ ul.vmenu a
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
 }
 
-.postcontent h2 a, .postcontent h2 a:link, .postcontent h2 a:hover, .postcontent h2 a:visited, .blockcontent h2 a, .blockcontent h2 a:link, .blockcontent h2 a:hover, .blockcontent h2 a:visited 
+.postcontent h2 a, .postcontent h2 a:link, .postcontent h2 a:hover, .postcontent h2 a:visited, .blockcontent h2 a, .blockcontent h2 a:link, .blockcontent h2 a:hover, .blockcontent h2 a:visited
 {
    font-size: 22px;
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
@@ -176,7 +176,7 @@ ul.vmenu a
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
 }
 
-.postcontent h3 a, .postcontent h3 a:link, .postcontent h3 a:hover, .postcontent h3 a:visited, .blockcontent h3 a, .blockcontent h3 a:link, .blockcontent h3 a:hover, .blockcontent h3 a:visited 
+.postcontent h3 a, .postcontent h3 a:link, .postcontent h3 a:hover, .postcontent h3 a:visited, .blockcontent h3 a, .blockcontent h3 a:link, .blockcontent h3 a:hover, .blockcontent h3 a:visited
 {
    font-size: 20px;
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
@@ -197,7 +197,7 @@ ul.vmenu a
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
 }
 
-.postcontent h4 a, .postcontent h4 a:link, .postcontent h4 a:hover, .postcontent h4 a:visited, .blockcontent h4 a, .blockcontent h4 a:link, .blockcontent h4 a:hover, .blockcontent h4 a:visited 
+.postcontent h4 a, .postcontent h4 a:link, .postcontent h4 a:hover, .postcontent h4 a:visited, .blockcontent h4 a, .blockcontent h4 a:link, .blockcontent h4 a:hover, .blockcontent h4 a:visited
 {
    font-size: 18px;
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
@@ -218,7 +218,7 @@ ul.vmenu a
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
 }
 
-.postcontent h5 a, .postcontent h5 a:link, .postcontent h5 a:hover, .postcontent h5 a:visited, .blockcontent h5 a, .blockcontent h5 a:link, .blockcontent h5 a:hover, .blockcontent h5 a:visited 
+.postcontent h5 a, .postcontent h5 a:link, .postcontent h5 a:hover, .postcontent h5 a:visited, .blockcontent h5 a, .blockcontent h5 a:link, .blockcontent h5 a:hover, .blockcontent h5 a:visited
 {
    font-size: 15px;
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
@@ -239,7 +239,7 @@ ul.vmenu a
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
 }
 
-.postcontent h6 a, .postcontent h6 a:link, .postcontent h6 a:hover, .postcontent h6 a:visited, .blockcontent h6 a, .blockcontent h6 a:link, .blockcontent h6 a:hover, .blockcontent h6 a:visited 
+.postcontent h6 a, .postcontent h6 a:link, .postcontent h6 a:hover, .postcontent h6 a:visited, .blockcontent h6 a, .blockcontent h6 a:link, .blockcontent h6 a:hover, .blockcontent h6 a:visited
 {
    font-size: 13px;
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
@@ -273,6 +273,7 @@ ol
 html, body
 {
    height: 100%;
+   max-height: 90px;
 }
 
 body
@@ -310,31 +311,31 @@ table.position
    table-layout: fixed;
 }
 
-li h1, .postcontent li h1, .blockcontent li h1 
+li h1, .postcontent li h1, .blockcontent li h1
 {
    margin:1px;
-} 
-li h2, .postcontent li h2, .blockcontent li h2 
+}
+li h2, .postcontent li h2, .blockcontent li h2
 {
    margin:1px;
-} 
-li h3, .postcontent li h3, .blockcontent li h3 
+}
+li h3, .postcontent li h3, .blockcontent li h3
 {
    margin:1px;
-} 
-li h4, .postcontent li h4, .blockcontent li h4 
+}
+li h4, .postcontent li h4, .blockcontent li h4
 {
    margin:1px;
-} 
-li h5, .postcontent li h5, .blockcontent li h5 
+}
+li h5, .postcontent li h5, .blockcontent li h5
 {
    margin:1px;
-} 
-li h6, .postcontent li h6, .blockcontent li h6 
+}
+li h6, .postcontent li h6, .blockcontent li h6
 {
    margin:1px;
-} 
-li p, .postcontent li p, .blockcontent li p 
+}
+li p, .postcontent li p, .blockcontent li p
 {
    margin:1px;
 }
@@ -385,10 +386,10 @@ li p, .postcontent li p, .blockcontent li p
   z-index: 99;
 }
 
-.headline, 
-.headline a, 
-.headline a:link, 
-.headline a:visited, 
+.headline,
+.headline a,
+.headline a:link,
+.headline a:visited,
 .headline a:hover
 {
 font-size: 36px;
@@ -428,13 +429,13 @@ text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
    z-index: auto !important;
 }
 
-.responsive .header 
+.responsive .header
 {
    background-image: url('images/header.png');
    background-position: center center;
 }
 
-.header>.widget 
+.header>.widget
 {
    position:absolute;
    z-index:101;
@@ -452,7 +453,7 @@ text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
    text-align: right;
 }
 
-ul.hmenu a, ul.hmenu a:link, ul.hmenu a:visited, ul.hmenu a:hover 
+ul.hmenu a, ul.hmenu a:link, ul.hmenu a:visited, ul.hmenu a:hover
 {
    outline: none;
    position: relative;
@@ -496,18 +497,18 @@ ul.hmenu:after, ul.hmenu ul:after
    clear: both;
 }
 
-ul.hmenu, ul.hmenu ul 
+ul.hmenu, ul.hmenu ul
 {
    min-height: 0;
 }
 
-ul.hmenu 
+ul.hmenu
 {
    display: inline-block;
    vertical-align: bottom;
 }
 
-.nav:before 
+.nav:before
 {
    content:' ';
 }
@@ -568,10 +569,10 @@ ul.hmenu>li>a
    text-align: center;
 }
 
-.hmenu a, 
-.hmenu a:link, 
-.hmenu a:visited, 
-.hmenu a.active, 
+.hmenu a,
+.hmenu a:link,
+.hmenu a:visited,
+.hmenu a.active,
 .hmenu a:hover
 {
    font-size: 13px;
@@ -594,8 +595,8 @@ ul.hmenu>li>a.active
    text-decoration: none;
 }
 
-ul.hmenu>li>a:visited, 
-ul.hmenu>li>a:hover, 
+ul.hmenu>li>a:visited,
+ul.hmenu>li>a:hover,
 ul.hmenu>li:hover>a {
    text-decoration: none;
 }
@@ -608,7 +609,7 @@ ul.hmenu>li>a:hover, .desktop ul.hmenu>li:hover>a
    padding:0 17px;
    margin:0 auto;
 }
-ul.hmenu>li>a:hover, 
+ul.hmenu>li>a:hover,
 .desktop-nav ul.hmenu>li:hover>a {
    color: #FA5D0F;
    text-decoration: none;
@@ -639,7 +640,7 @@ ul.hmenu li li a
    padding:0 10px;
    margin:0 auto;
 }
-ul.hmenu li li 
+ul.hmenu li li
 {
    float: none;
    width: auto;
@@ -647,12 +648,12 @@ ul.hmenu li li
    margin-bottom: 2px;
 }
 
-.desktop-nav ul.hmenu li li ul>li:first-child 
+.desktop-nav ul.hmenu li li ul>li:first-child
 {
    margin-top: 0;
 }
 
-ul.hmenu li li ul>li:last-child 
+ul.hmenu li li ul>li:last-child
 {
    margin-bottom: 0;
 }
@@ -673,9 +674,9 @@ ul.hmenu li li ul>li:last-child
    margin:0;
 }
 
-.hmenu ul a:link, 
-.hmenu ul a:visited, 
-.hmenu ul a.active, 
+.hmenu ul a:link,
+.hmenu ul a:visited,
+.hmenu ul a.active,
 .hmenu ul a:hover
 {
    text-align: left;
@@ -700,11 +701,11 @@ ul.hmenu li li:after
    border-bottom: 1px dotted #C6D1DD;
 }
 
-.desktop-nav ul.hmenu li li:first-child:before, 
-.desktop-nav ul.hmenu li li:first-child:after 
+.desktop-nav ul.hmenu li li:first-child:before,
+.desktop-nav ul.hmenu li li:first-child:after
 {
    display: none;
-} 
+}
 
 ul.hmenu ul li a:hover, .desktop ul.hmenu ul li:hover>a
 {
@@ -774,14 +775,14 @@ ul.hmenu ul
    margin: -36px 0 0 -5px;
 }
 
-.desktop-nav ul.hmenu ul.hmenu-left-to-right 
+.desktop-nav ul.hmenu ul.hmenu-left-to-right
 {
    right: auto;
    left: 0;
    margin: -10px 0 0 -30px;
 }
 
-.desktop-nav ul.hmenu ul.hmenu-right-to-left 
+.desktop-nav ul.hmenu ul.hmenu-right-to-left
 {
    left: auto;
    right: 0;
@@ -861,7 +862,7 @@ ul.hmenu ul
 
 .desktop-nav ul.hmenu>li.ext>a:hover,
 .desktop-nav ul.hmenu>li.ext:hover>a,
-.desktop-nav ul.hmenu>li.ext:hover>a.active  
+.desktop-nav ul.hmenu>li.ext:hover>a.active
 {
    background: none;
    /* default padding + border size */
@@ -878,7 +879,7 @@ ul.hmenu ul
 
 .desktop-nav ul.hmenu>li.ext>a:hover:before,
 .desktop-nav ul.hmenu>li.ext:hover>a:before,
-.desktop-nav ul.hmenu>li.ext:hover>a.active:before  
+.desktop-nav ul.hmenu>li.ext:hover>a.active:before
 {
    position: absolute;
    content: ' ';
@@ -896,14 +897,14 @@ ul.hmenu ul
    z-index: -1;
 }
 
-.desktop-nav ul.hmenu>li.ext:hover>ul 
+.desktop-nav ul.hmenu>li.ext:hover>ul
 {
    padding-top: 5px;
    /* menu bar padding */
   margin-top: 0;
 }
 
-.desktop-nav ul.hmenu>li.ext:hover>ul:before 
+.desktop-nav ul.hmenu>li.ext:hover>ul:before
 {
    /* border + shadow */
   top: -1px;
@@ -925,7 +926,7 @@ ul.hmenu>li.ext>.ext-off
    box-sizing: border-box;
 }
 
-.desktop-nav ul.hmenu>li.ext>ul 
+.desktop-nav ul.hmenu>li.ext>ul
 {
    z-index: 13;
 }
@@ -936,8 +937,8 @@ ul.hmenu>li.ext>.ext-off
    position: absolute;
    display: block;
    overflow: hidden;
-   /* size of radius 
-   * if size if 0 we should now generate script 
+   /* size of radius
+   * if size if 0 we should now generate script
    * that adds ext-r and ext-m divs
    */
   height: 6px;
@@ -995,8 +996,8 @@ ul.hmenu>li.ext>.ext-off
    border-top-left-radius: 3px;
 }
 
-.desktop-nav ul.hmenu>li.ext:hover>.ext-m, 
-.desktop-nav ul.hmenu>li.ext:hover>.ext-off 
+.desktop-nav ul.hmenu>li.ext:hover>.ext-m,
+.desktop-nav ul.hmenu>li.ext:hover>.ext-off
 {
    position: absolute;
    display: block;
@@ -1005,7 +1006,7 @@ ul.hmenu>li.ext>.ext-off
    top: 100%;
 }
 
-.desktop-nav ul.hmenu>li.ext.ext-r:hover>.ext-m 
+.desktop-nav ul.hmenu>li.ext.ext-r:hover>.ext-m
 {
    /* shadow offset */
   left: -0;
@@ -1015,7 +1016,7 @@ ul.hmenu>li.ext>.ext-off
    padding-left: 0;
 }
 
-.desktop-nav ul.hmenu>li.ext:hover>.ext-off 
+.desktop-nav ul.hmenu>li.ext:hover>.ext-off
 {
    /* shadow offset */
   left: -0;
@@ -1045,8 +1046,8 @@ ul.hmenu>li.ext>.ext-off
    padding-right: 0;
 }
 
-.desktop-nav ul.hmenu>li.ext:hover>.ext-m:before, 
-.desktop-nav ul.hmenu>li.ext:hover>.ext-off:before 
+.desktop-nav ul.hmenu>li.ext:hover>.ext-m:before,
+.desktop-nav ul.hmenu>li.ext:hover>.ext-off:before
 {
    position: absolute;
    content: ' ';
@@ -1092,7 +1093,7 @@ ul.hmenu>li.ext>.ext-off
    border-collapse: collapse;
 }
 
-.content-layout-row 
+.content-layout-row
 {
    display: table-row;
 }
@@ -1120,7 +1121,7 @@ div.vmenublock img
 .vmenublockheader .t,
 .vmenublockheader .t a,
 .vmenublockheader .t a:link,
-.vmenublockheader .t a:visited, 
+.vmenublockheader .t a:visited,
 .vmenublockheader .t a:hover
 {
    color: #FA6114;
@@ -1178,7 +1179,7 @@ ul.vmenu>li>a
    min-height: 30px;
    line-height: 30px;
 }
-ul.vmenu a 
+ul.vmenu a
 {
    display: block;
    cursor: pointer;
@@ -1271,12 +1272,12 @@ ul.vmenu>li>a:hover, ul.vmenu>li>a.active:hover
    text-decoration: none;
 }
 
-ul.vmenu a:hover, ul.vmenu a.active:hover 
+ul.vmenu a:hover, ul.vmenu a.active:hover
 {
    color: #FA5705;
 }
 
-ul.vmenu>li>a.active:hover>span.border-top, ul.vmenu>li>a.active:hover>span.border-bottom 
+ul.vmenu>li>a.active:hover>span.border-top, ul.vmenu>li>a.active:hover>span.border-bottom
 {
    background-color: transparent;
 }
@@ -1418,7 +1419,7 @@ div.block img
 .blockheader .t,
 .blockheader .t a,
 .blockheader .t a:link,
-.blockheader .t a:visited, 
+.blockheader .t a:visited,
 .blockheader .t a:hover
 {
    color: #758799;
@@ -1439,7 +1440,7 @@ div.block img
    line-height: 175%;
 }
 .blockcontent table,
-.blockcontent li, 
+.blockcontent li,
 .blockcontent a,
 .blockcontent a:link,
 .blockcontent a:visited,
@@ -1568,7 +1569,7 @@ input, select, textarea
    font-style: normal;
 }
 
-.block select 
+.block select
 {
    width:96%;
 }
@@ -1655,7 +1656,7 @@ form.search input[type="text"]
    font-weight: normal;
    font-style: normal;
 }
-form.search 
+form.search
 {
    background-image: none;
    border: 0;
@@ -1679,7 +1680,7 @@ form.search>input {
    left:0;
    vertical-align: middle;
 }
- 
+
 form.search input[type="submit"]
 {
    margin:0 auto;
@@ -1896,8 +1897,8 @@ pre
    font-style: normal;
 }
 
-.postheader a, 
-.postheader a:link, 
+.postheader a,
+.postheader a:link,
 .postheader a:visited,
 .postheader a.visited,
 .postheader a:hover,
@@ -2053,7 +2054,7 @@ blockquote p,
 .footer a:link,
 .footer a:visited,
 .footer a:hover,
-.footer td, 
+.footer td,
 .footer th,
 .footer caption
 {
@@ -2063,7 +2064,7 @@ blockquote p,
    line-height: 175%;
 }
 
-.footer p 
+.footer p
 {
    padding:0;
    text-align: center;
@@ -2148,7 +2149,7 @@ blockquote p,
    padding-left: 13px;
 }
 
-.page-footer, 
+.page-footer,
 .page-footer a,
 .page-footer a:link,
 .page-footer a:visited,
@@ -2274,7 +2275,7 @@ img.lightbox-image.active
    filter: alpha(opacity=100);
 }
 
-.arrow.disabled 
+.arrow.disabled
 {
    display: none;
 }
@@ -2311,7 +2312,7 @@ img.lightbox-image.active
    filter: alpha(opacity=50);
 }
 
-.close:hover 
+.close:hover
 {
    opacity: 1;
    filter: alpha(opacity=100);
@@ -2352,7 +2353,7 @@ img.lightbox-image.active
     -moz-transform: rotate(-45deg);
 /* Firefox */}
 
-.close-alt, .arrow-right-alt, .arrow-left-alt 
+.close-alt, .arrow-right-alt, .arrow-left-alt
 {
    display: none;
    color: #fff;
