--- a/style.css
+++ b/style.css
@@ -404,11 +404,6 @@ text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
   white-space: nowrap;
 }
 
-
-
-
-
-
 .sheet
 {
    margin:5px auto 0;
@@ -575,7 +570,7 @@ ul.hmenu>li>a
 .hmenu a.active,
 .hmenu a:hover
 {
-   font-size: 13px;
+   font-size: 20px;
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
    font-weight: normal;
    font-style: normal;
@@ -2385,3 +2380,55 @@ img.lightbox-image.active
 	margin-left: 10px;
 }
 /* End Additional CSS Styles */
+
+@media only screen and (min-width:768px){
+    .headline
+    {
+      display: inline-block;
+      position: absolute;
+      min-width: 50px;
+      top: 30px;
+      left: 2.05%;
+      line-height: 100%;
+      margin-left: -2px !important;
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+      z-index: 99;
+    }
+
+    .headline,
+    .headline a,
+    .headline a:link,
+    .headline a:visited,
+    .headline a:hover
+    {
+    font-size: 76px;
+    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
+    font-weight: normal;
+    font-style: normal;
+    text-decoration: none;
+    text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+      padding: 0;
+      margin: 0;
+      color: #FA6114 !important;
+      white-space: nowrap;
+    }
+
+    .hmenu a,
+    .hmenu a:link,
+    .hmenu a:visited,
+    .hmenu a.active,
+    .hmenu a:hover
+    {
+       font-size: 16px;
+       font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
+       font-weight: normal;
+       font-style: normal;
+       text-decoration: none;
+       text-transform: uppercase;
+       text-align: left;
+    }
+  @media only screen and (min-width:1100px){
