--- a/pl/css/style.css
+++ b/pl/css/style.css
@@ -190,7 +190,7 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 
-select{width:114px;height: 40px;font-size: 12px;text-align-last: center;}
+select{width:98px;height: 40px;font-size: 11px;text-align-last: center;}
 
 #price{
   position: relative;
@@ -199,17 +199,31 @@ select{width:114px;height: 40px;font-size: 12px;text-align-last: center;}
 }
 
 .order{
-  background-color:red; 
-  color:white; 
-  position:absolute; 
+  background-color:red;
+  color:white;
+  position:absolute;
   text-align: left;
   font-size:9px;
-  margin:-16px -1px; 
-  padding:7px 3px;  
-  
-}
-}
+  margin:-16px -1px;
+  padding:7px 3px;
 
+}
+}
+@media only screen and (min-width:360px){
+
+  select{width:111px;height: 40px;font-size: 12px;text-align-last: center;}
+
+ }
+ @media only screen and (min-width:390px){
+
+   select{width:121px;height: 40px;font-size: 12px;text-align-last: center;}
+
+  }
+  @media only screen and (min-width:450px){
+
+    select{width:141px;height: 40px;font-size: 12px;text-align-last: center;}
+
+   }
    @media only screen and (min-width:768px){
  .wrapper {
      width: 750px;
@@ -275,7 +289,7 @@ select{width:190px;height: 30px;font-size: 15px;text-align-last: center;}
 }
 
 .order{
-  margin:-16px -7px; 
+  margin:-16px -7px;
   padding:7px 6px;
   font-size:12px;
 }
@@ -313,7 +327,7 @@ select{width:190px;height: 30px;font-size: 15px;text-align-last: center;}
         font-size: 17px;
       }
         .order{
-          margin:-16px -6px; 
+          margin:-16px -6px;
           padding:7px 4px;
           font-size:14px;
 }
