--- a/pl/css/style.css
+++ b/pl/css/style.css
@@ -52,7 +52,7 @@ line-height: 0px;
 
 .responsive{
     width: 100%;
-    height: 0;
+    /* height: 0; */
     padding-bottom: 56.26%;
     position: relative;
 }
@@ -227,7 +227,6 @@ select{width:98px;height: 40px;font-size: 11px;text-align-last: center;}
    @media only screen and (min-width:768px){
  .wrapper {
      width: 750px;
-     height: 750px;
      margin: -29px auto;
    }
 
