--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ line-height: 0px;
 
 .responsive{
     width: 100%;
-    height: 0;
+    /* height: 0; */
     padding-bottom: 56.26%;
     position: relative;
 }
@@ -80,7 +80,7 @@ line-height: 0px;
   .img-info h2 {
     padding: 0px 5px 0px;
     font-family: arial;
-    font-size: 30px;
+    font-size: 18px;
     color: #111;
     line-height: 0px;
   }
@@ -214,7 +214,7 @@ select{width:98px;height: 40px;font-size: 11px;text-align-last: center;}
     select{width:141px;height: 40px;font-size: 12px;text-align-last: center;}
 
    }
-   
+
    @media only screen and (min-width:768px){
  .wrapper {
      width: 750px;
