--- a/es/css/style.css
+++ b/es/css/style.css
@@ -1,5 +1,4 @@
 
-   @media only screen and (min-width: 10px){
 *{
   text-align: justify;
   font-family: sans-serif;
@@ -9,6 +8,10 @@
   width: 600px;
   margin: auto;
   background-color: #e3e3e3;
+}
+
+.wrapper {
+    height: 800px;
 }
 
 .img-banner {
@@ -81,7 +84,7 @@ line-height: 0px;
   .img-info h2 {
     padding: 0px 5px 0px;
     font-family: arial;
-    font-size: 30px;
+    font-size: 18px;
     color: #111;
     line-height: 0px;
   }
@@ -198,35 +201,28 @@ select{width:98px;height: 40px;font-size: 11px;text-align-last: center;}
   margin:4px -14px;
 }
 
-.order{
-  background-color:red;
-  color:white;
-  position:absolute;
-  text-align: left;
-  font-size:9px;
-  margin:-16px -1px;
-  padding:7px 3px;
+#order{background-color:red; color:white; position:absolute; margin:-16px 3px; padding:7px 8px;text-align: left;}
 
-}
-}
-   @media only screen and (min-width:360px){
+@media only screen and (min-width:360px){
 
-     select{width:111px;height: 40px;font-size: 12px;text-align-last: center;}
+  select{width:111px;height: 40px;font-size: 12px;text-align-last: center;}
 
-    }
-    @media only screen and (min-width:390px){
+ }
+ @media only screen and (min-width:390px){
 
-      select{width:121px;height: 40px;font-size: 12px;text-align-last: center;}
+   select{width:121px;height: 40px;font-size: 12px;text-align-last: center;}
 
-     }
-     @media only screen and (min-width:450px){
+  }
+  @media only screen and (min-width:450px){
 
-       select{width:141px;height: 40px;font-size: 12px;text-align-last: center;}
+    select{width:141px;height: 40px;font-size: 12px;text-align-last: center;}
 
-      }
+   }
+
    @media only screen and (min-width:768px){
  .wrapper {
      width: 750px;
+     height: 1000px;
      margin: -29px auto;
 }
    .headline,
@@ -286,11 +282,7 @@ select{width:190px;height: 30px;font-size: 15px;text-align-last: center;}
 
 }
 
-.order{
-  margin:-16px -7px;
-  padding:7px 6px;
-  font-size:12px;
-}
+#order{background-color:red; color:white; position:absolute; margin:-16px 3px; padding:7px 8px;text-align: left;}
 
    @media only screen and (min-width: 1100px){
 
@@ -324,9 +316,5 @@ select{width:190px;height: 30px;font-size: 15px;text-align-last: center;}
       td, th {
         font-size: 17px;
       }
-        .order{
-          margin:-16px -6px;
-          padding:7px 4px;
-          font-size:14px;
-}
+
    }
