--- a/pl/css/style.css
+++ b/pl/css/style.css
@@ -139,9 +139,9 @@ header label{
 }
 
 .img-info h2 {
-  padding: 0px 0px 16px;
+  padding: 16px 0px 16px;
   font-family: arial;
-  font-size: 18px;
+  font-size: 20px;
   color: #111;
   line-height: 0px;
 }
@@ -226,6 +226,14 @@ td, th {
   }
   header label{
     padding-right: 20px;
+  }
+
+  .img-info h2 {
+    padding: 0px 0px 16px;
+    font-family: arial;
+    font-size: 18px;
+    color: #111;
+    line-height: 0px;
   }
 
   .img-banner {
