--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ body{
   /* min-width: 140vh;
   background: url(../images/fachada.jpg) no-repeat;
   background-size: cover;
-  background-position: center;
-  background-color: rgba(0,0,0,.1);*/
+  background-position: center;*/
+  background-color: rgba(0,0,0,.1);
 }
 
 li{
@@ -148,7 +148,7 @@ header label{
 .responsive{
     width: 100%;
     /* height: 0; */
-    padding-bottom: 69.26%;
+    padding-bottom: 56.26%;
     position: relative;
     overflow-x:auto;
 }
@@ -196,6 +196,12 @@ td, th {
 
 tr:nth-child(even){
   background-color: #f2f2f2;
+}
+
+.teQAzf {
+    margin: auto;
+    max-width: 90vw;
+    width: 100% !important;
 }
 
 @media(max-width:991px){
@@ -280,6 +286,13 @@ tr:nth-child(even){
       position:fixed;
       top:57px;
       right:90px;
+    }
+    .responsive{
+        width: 100%;
+        /* height: 0; */
+        padding-bottom: 335.26%;
+        position: relative;
+        overflow-x:auto;
     }
 
       select{
