--- a/pl/css/style.css
+++ b/pl/css/style.css
@@ -11,8 +11,8 @@ body{
   /* min-width: 140vh;
   background: url(../images/fachada.jpg) no-repeat;
   background-size: cover;
-  background-position: center;
-  background-color: rgba(0,0,0,.1);*/
+  background-position: center;*/
+  background-color: rgba(0,0,0,.1);
 }
 
 li{
@@ -57,16 +57,33 @@ header{
   z-index: 1000;
 
 }
+header .logo {
+  font-size: 38px;
+  color: #FFFFD2;
+  text-align: center;
+  animation: glow 2s ease-in-out infinite alternate;
+  position: relative;
+  padding: 0px 0px 0px 4%;
+}
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #696969, 0 0 20px #696969, 0 0 30px #696969, 0 0 40px #696969, 0 0 50px #696969;
+  }
 
-header .logo{
+  to {
+    text-shadow: 0 0 10px #b84308, 0 0 20px #b84308, 0 0 30px #b84308, 0 0 40px #b84308, 0 0 50px #b84308, 0 0 60px #b84308;
+  }
+}
+/* header .logo{
   font-weight: bolder;
   font-size: 38px;
   font-weight: normal;
-  text-shadow: -1px 1px 0px rgba(0,0,0,0.3);
+  text-shadow: -1px 1px 0px rgba(0,0,0,0.5);
   color: #FA6114 !important;
   white-space: nowrap;
   padding: 0px 0px 0px 60px;
-}
+} */
+
 
 header nav ul{
   list-style: none;
@@ -198,6 +215,12 @@ tr:nth-child(even){
   background-color: #f2f2f2;
 }
 
+.teQAzf {
+    margin: auto;
+    max-width: 90vw;
+    width: 100% !important;
+}
+
 @media(max-width:991px){
   header{
     padding:0px;
@@ -206,7 +229,8 @@ tr:nth-child(even){
 
   header .logo{
     padding: 0px 0px 0px 4%;
-
+    position: relative;
+    left: 0px;
   }
   header label{
     display: initial;
@@ -280,6 +304,13 @@ tr:nth-child(even){
       position:fixed;
       top:57px;
       right:90px;
+    }
+    .responsive{
+        width: 100%;
+        /* height: 0; */
+        padding-bottom: 335.26%;
+        position: relative;
+        overflow-x:auto;
     }
 
       select{
