--- a/pl/css/style.css
+++ b/pl/css/style.css
@@ -387,4 +387,9 @@ tr:nth-child(even){
         display:list-item;
       }
 
+      .leftcolumn, .rightcolumn {
+        width: 100%;
+        padding: 0;
+      }
+
 }
